--- a/next_cloud examples/roles/NextCloud/main.yml
+++ b/next_cloud examples/roles/NextCloud/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Download Next Cloud
-  get_url: url=
+  get_url: url= https://download.nextcloud.com/server/releases/nextcloud-12.0.0.tar.bz2
   #find the correct url
   #add next_cloud_version to vars
 - name: Extract archive
