--- a/next_cloud examples/site.yml
+++ b/next_cloud examples/site.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install NextCloud, MySQL, Nginx, and PHP-FPM
-  hosts: all
+  hosts: tag_Name_lookatme
   remote_user: root
   # remote_user: user
   # become: yes
