--- a/next_cloud examples/roles/NextCloud/tasks/main.yml
+++ b/next_cloud examples/roles/NextCloud/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Download Next Cloud
   get_url: url=https://download.nextcloud.com/server/releases/nextcloud-12.0.0.tar.bz2
-    dest: /tmp/
+    dest=/tmp/
 
 - name: extract installer
   unarchive:
