--- a/next_cloud examples/roles/mariadb/tasks/main.yml
+++ b/next_cloud examples/roles/mariadb/tasks/main.yml
@@ -19,6 +19,6 @@
 - name: Start MariaDB Service
   service: name=mariadb state=started enabled=yes
 
-- name: insert firewalld rule
-  firewalld: port={{ mysql_port }}/tcp permanent=true state=enabled immediate=yes
-  ignore_errors: yes
+#- name: insert firewalld rule
+#  firewalld: port={{ mysql_port }}/tcp permanent=true state=enabled immediate=yes
+#  ignore_errors: yes
