--- a/next_cloud examples/roles/php-fpm/templates/nextcloud.conf
+++ b/next_cloud examples/roles/php-fpm/templates/nextcloud.conf
@@ -1,1 +1,15 @@
-#will need to be the nginx conf file once it is written
+[nextcloud]
+listen = /var/run/php-fpm/nextcloud.sock
+listen.owner = nginx
+listen.group = nginx
+listen.mode = 0660
+user = nginx
+group = nginx
+pm = dynamic
+pm.max_children = 10
+pm.start_servers = 1
+pm.min_spare_servers = 1
+pm.max_spare_servers = 3
+pm.max_requests = 500
+chdir = /usr/share/nginx/html/nextcloud
+php_admin_value[open_basedir] = /usr/share/nginx/html/nextcloud:/tmp
