--- a/next_cloud examples/roles/NextCloud/tasks/main.yml
+++ b/next_cloud examples/roles/NextCloud/tasks/main.yml
@@ -1,18 +1,20 @@
 ---
 - name: Download Next Cloud
-  get_url: url=https://download.nextcloud.com/server/releases/nextcloud-12.0.0.tar.bz2
+  get_url: url=https://download.nextcloud.com/server/releases/nextcloud-12.0.0.zip
     dest=/tmp/
 
 - name: extract installer
   unarchive:
-    src: /tmp/nextcloud-12.0.0.tar.bz2
-    dest: /tmp/
+    src: /tmp/nextcloud-12.0.0.zip
+    dest: /usr/share/nginx/html
     remote_src: True
+    owner: nginx
+    group: nginx
 
 - name: Template config file
   template:
     src: config.php
-    dest: /srv/nextcloud/config/config.php
+    dest: /usr/share/nginx/html/nextcloud/config/config.php
   notify: restart nginx
 
 #- name: Add group "nextcloud"
@@ -25,10 +27,7 @@
   file: dest=/opt/nextcloud/data owner=nginx group=nginx mode=0755 state=directory
 
 - name: Create NextCloud database
-  mysql_db: name={{ next_cloud_db }} state=present
+  mysql_db: name={{ nc_db_name }} state=present
 
 - name: Create NextCloud database user
   mysql_user: name={{ nc_db_user }} password={{ nc_db_password }} priv={{ nc_db_name }}.*:ALL host='localhost' state=present
-
-- name: Change ownership of NextCloud installation
-  file: path=/srv/nextcloud/ owner=nextcloud group=nextcloud state=directory recurse=yes
