--- a/next_cloud examples/roles/common/tasks/main.yml
+++ b/next_cloud examples/roles/common/tasks/main.yml
@@ -1,24 +1,14 @@
 ---
-- name: Copy the NGINX repository definition
-  copy: src=nginx.repo dest=/etc/yum.repos.d/
+- name: install EPEL
+  yum: name=epel-release state=present
 
-#- name: Copy the EPEL repository definition
-#  copy: src=epel.repo dest=/etc/yum.repos.d/
+- name: install tools
+  yum: name={{item}} state=present
+  with_items:
+    - unzip
 
-- name: Copy the REMI repository definition
-  copy: src=remi.repo dest=/etc/yum.repos.d/
+#- name: Install Firewalld
+#  yum: name=firewalld state=present
 
-- name: Create the GPG key for NGINX
-  copy: src=RPM-GPG-KEY-NGINX dest=/etc/pki/rpm-gpg
-
-#- name: Create the GPG key for EPEL
-#  copy: src=RPM-GPG-KEY-EPEL-7 dest=/etc/pki/rpm-gpg
-
-#- name: Create the GPG key for REMI
-#  copy: src=RPM-GPG-KEY-remi dest=/etc/pki/rpm-gpg
-
-- name: Install Firewalld
-  yum: name=firewalld state=present
-
-- name: Firewalld service state
-  service: name=firewalld state=started enabled=yes
+#- name: Firewalld service state
+#  service: name=firewalld state=started enabled=yes
