--- a/next_cloud examples/roles/php-fpm/tasks/main.yml
+++ b/next_cloud examples/roles/php-fpm/tasks/main.yml
@@ -17,6 +17,6 @@
   command: mv /etc/php-fpm.d/www.conf /etc/php-fpm.d/www.disabled creates=/etc/php-fpm.d/www.disabled
   notify: restart php-fpm
 
-#- name: Copy php-fpm configuration
-#  template: src=wordpress.conf dest=/etc/php-fpm.d/
-#  notify: restart php-fpm
+- name: Copy php-fpm configuration
+  template: src=nextcloud.conf dest=/etc/php-fpm.d/
+  notify: restart php-fpm
