--- a/NC/playbooks/templates/nextcloud.conf
+++ b/NC/playbooks/templates/nextcloud.conf
@@ -1,33 +1,49 @@
-upstream php-handler {
-    server 127.0.0.1:9000;
-    #server unix:/var/run/php5-fpm.sock;
+# For more information on configuration, see:
+#   * Official English Documentation: http://nginx.org/en/docs/
+#   * Official Russian Documentation: http://nginx.org/ru/docs/
+
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
+
+# Load dynamic modules. See /usr/share/nginx/README.dynamic.
+include /usr/share/nginx/modules/*.conf;
+
+events {
+    worker_connections 1024;
 }
 
-server {
+http {
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile            on;
+    tcp_nopush          on;
+    tcp_nodelay         on;
+    keepalive_timeout   65;
+    types_hash_max_size 2048;
+
+    include             /etc/nginx/mime.types;
+    default_type        application/octet-stream;
+
+    # Load modular configuration files from the /etc/nginx/conf.d directory.
+    # See http://nginx.org/en/docs/ngx_core_module.html#include
+    # for more information.
+    include /etc/nginx/conf.d/*.conf;
+    upstream php-handler {
+        server unix:/var/run/php5-fpm.sock;
+    }
+
+    server {
     listen 80;
     server_name cloud.nextcloud.co;
-    # enforce https
-    return 301 https://$server_name$request_uri;
-}
 
-server {
-    listen 443 ssl;
-    server_name cloud.nextcloud.co;
 
-    ssl_certificate /etc/nginx/cert/nextcloud.crt;
-    ssl_certificate_key /etc/nginx/cert/nextcloud.key;
 
-    # Add headers to serve security related headers
-    # Before enabling Strict-Transport-Security headers please read into this
-    # topic first.
-    add_header Strict-Transport-Security "max-age=15768000;
-    includeSubDomains; preload;";
-    add_header X-Content-Type-Options nosniff;
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-XSS-Protection "1; mode=block";
-    add_header X-Robots-Tag none;
-    add_header X-Download-Options noopen;
-    add_header X-Permitted-Cross-Domain-Policies none;
 
     # Path to the root of your installation
     root /usr/share/nginx/html/nextcloud/;
@@ -121,4 +137,5 @@ server {
         # Optional: Don't log access to other assets
         access_log off;
     }
+}
 }
