--- a/NC/playbooks/templates/nextcloud.conf
+++ b/NC/playbooks/templates/nextcloud.conf
@@ -35,18 +35,18 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
     upstream php-handler {
-        server unix:/var/run/php5-fpm.sock;
+        server 127.0.0.1:9000;
     }
 
     server {
     listen 80;
-    server_name cloud.nextcloud.co;
+    # server_name cloud.nextcloud.co;
 
 
 
 
     # Path to the root of your installation
-    root /usr/share/nginx/html/nextcloud/;
+    root /usr/share/nginx/html;
 
     location = /robots.txt {
         allow all;
